...
            android:id="@+id/til_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textColorHint="@color/colorTextLight">
            <EditText android:id="@+id/username_edit_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@string/input_length"
                android:inputType="text"
                android:hint="@string/sign_up_username_label"
                android:textColor="@color/colorTextLight"
...
            android:id="@+id/til_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textColorHint="@color/colorTextLight">
            <EditText android:id="@+id/password_edit_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@string/input_length"
                android:inputType="textPassword"
                android:hint="@string/sign_up_password_label"
                android:textColor="@color/colorTextLight"
...
            android:id="@+id/til_reenter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textColorHint="@color/colorTextLight">
            <EditText android:id="@+id/reeneter_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@string/input_length"
                android:inputType="textPassword"
                android:hint="@string/sign_up_reenter_password"
                android:textColor="@color/colorTextLight"
...
            android:id="@+id/til_security_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textColorHint="@color/colorTextLight">
            <EditText android:id="@+id/enter_security_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@string/input_length"
                android:inputType="textPassword"
                android:hint="@string/sign_up_enter_answer_label"
                android:textColor="@color/colorTextLight"
                android:backgroundTint="@color/colorTextLight"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Sign Up Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/finish_signup_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="0dp"
            android:padding="12dp"
            android:text="@string/sign_up_create_label"
...
