...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorTextLight">
        <EditText
            android:id="@+id/transaction_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="@string/input_length"
            android:hint="@string/item_name_label"
...
                android:layout_weight="1"
                android:text="@string/transaction_transaction_label"
                android:checked="true"
                android:textColor="@color/colorAccent"
                android:buttonTint="@color/colorTextLight"
                android:layout_marginEnd="16dp"/>
            <RadioButton android:id="@+id/radio_refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transaction_refund_label"
                android:textColor="@color/colorTextLight"
                android:buttonTint="@color/colorTextLight"/>
...
        android:id="@+id/til_transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorTextLight">
        <EditText
            android:id="@+id/transaction_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="$0.00"
            android:textColor="@color/colorTextLight"
            android:backgroundTint="@color/colorTextLight"
...
        android:id="@+id/til_transaction_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorTextLight">
        <EditText
            android:id="@+id/transaction_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="@string/input_length_longer"
            android:hint="@string/memo_label"
...
