<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_add_budget_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorTextLight">
        <EditText
            android:id="@+id/add_budget_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@string/input_length"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/add_budget_budget_name_label"
            android:textColor="@color/colorTextLight"
            android:backgroundTint="@color/colorTextLight"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/add_budget_input_text_size"
        android:text="@string/add_budget_end_date_label"
        android:textColor="@color/colorTextLight"/>

    <DatePicker
        android:id="@+id/add_budget_end_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/date_picker_height"
        android:paddingLeft="@dimen/row_padding_size"
        android:paddingRight="@dimen/row_padding_size"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        >
    </DatePicker>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/add_budget_input_text_size"
        android:text="@string/add_budget_threshold_label"
        android:textColor="@color/colorTextLight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation= "horizontal">

        <TextView
            android:id="@+id/threshold_progress"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="75%"
            android:gravity="center"
            android:layout_marginEnd="@dimen/add_budget_input_seek_bar_left_margin"
            android:textColor="@color/colorTextLight"/>

        <SeekBar
            android:id="@+id/threshold_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:max="99"
            android:progress="74"
            android:layout_weight="50"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/add_budget_input_text_size"
        android:text="@string/add_budget_frequency_label"
        android:textColor="@color/colorTextLight"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:orientation= "horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_budget_frequency_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextLight">
            <EditText
                android:id="@+id/add_budget_frequency_number"
                android:layout_width="@dimen/add_budget_input_frequency_input_width"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"
                android:maxLength="@string/input_length_shorter"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/colorTextLight"
                android:backgroundTint="@color/colorTextLight"
                />
        </android.support.design.widget.TextInputLayout>
        <RadioGroup
            android:id="@+id/radio_group_add_freq"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_add_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:buttonTint="@color/colorTextLight"
                android:checked="true"
                android:text="@string/label_day"
                android:textColor="@color/colorAccent"
                android:layout_marginEnd="16dp"/>

            <RadioButton
                android:id="@+id/radio_add_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:buttonTint="@color/colorTextLight"
                android:text="@string/label_week"
                android:textColor="@color/colorTextLight" />
        </RadioGroup>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_budget_limit_label"
        android:paddingRight="@dimen/row_padding_size"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:textColor="@color/colorTextLight"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_add_budget_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorTextLight">
        <EditText
            android:id="@+id/add_budget_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="$0.00"
            android:textColor="@color/colorTextLight"
            android:backgroundTint="@color/colorTextLight"
            />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>