...
            android:id="@+id/til_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorTextLight">
            <EditText android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@string/input_length"
                android:inputType="text"
                android:hint="@string/login_username_label"
                android:textColor="@color/colorTextLight"
...
            android:id="@+id/til_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorTextLight">
            <EditText android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@string/input_length"
                android:inputType="textPassword"
                android:hint="@string/login_password_label"
                android:textColor="@color/colorTextLight"
                android:backgroundTint="@color/colorTextLight"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="0dp"
            android:padding="12dp"
            android:text="@string/login_login_button_label"
...
